--- a/src/talk.html
+++ b/src/talk.html
@@ -30,14 +30,49 @@
             <ul class="content">
                 <li class="contextBox">
                     <div class="head"></div>
+                    <div class="textBox">
+                        <div class="jiantouLeft"></div>
+                        <div class="text">和代好爱上大搜爱神的箭你扫地哈斯迪欧hi殴打扫黄按属地欧萨哄你集的京东is啊</div>
+                    </div>
                 </li>
-                
+                <li class="contextBox myContentBox">
+                    <div class="head myhead"></div>
+                    <div class="textBox mytextBox">
+                        <div class="jiantouLeft jiantouRight"></div>
+                        <div class="text">和代好爱上大搜爱神的箭你扫地哈斯迪欧hi殴打扫黄按属地欧萨哄你集的京东is啊</div>
+                        <div class="pScorce">+0.4积分</div>
+                    </div>
+                </li>
+
+                <li class="talkTime">
+                    <div class="date">今天 下午 05:34</div>
+                </li>
+
+                <li class="contextBox">
+                    <div class="head"></div>
+                    <div class="textBox">
+                        <div class="jiantouLeft"></div>
+                        <div class="text">和代好爱上大搜爱神的箭你扫地哈斯迪欧hi殴打扫黄按属地欧萨哄你集的京东is啊</div>
+                    </div>
+                </li>
+
+                <li class="contextBox">
+                    <div class="head"></div>
+                    <div class="textBox">
+                        <div class="jiantouLeft"></div>
+                        <div class="text">
+                            <img src="./img/bbb.png" alt="">
+                        </div>
+                    </div>
+                </li>
             </ul>
         </main>
         <footer>
             <div class="inputBox">
                 <input class="input" type="text" placeholder="请输入消息...">
-                <div class="sendmsg"></div>
+                <div class="sendmsgbox">
+                    <div class="sendmsg"></div>
+                </div>
                 <div class="checkImg">
                     <input class="inputFile" type="file" accept=".jpg, .jpeg, .png">
                 </div>
