--- a/src/talk.html
+++ b/src/talk.html
@@ -21,9 +21,9 @@
 
 <body>
     <div class="app">
-        <header class="title istalk">
+        <header class="title">
             <div class="ListBack"><img src="./img/back.png" alt=""></div>
-            <div class="accountDefaultStyle accountName">账号[隔壁小姐姐]</div>
+            <div class="accountDefaultStyle">账号[邻家小妹妹]</div>
             <div class="mymessage">我的资料：38|广告策划|江苏南京</div>
         </header>
         <main class="itemWrap talkPage">
@@ -33,6 +33,13 @@
                     <div class="textBox">
                         <div class="jiantouLeft"></div>
                         <div class="text">和代好爱上大搜爱神的箭你扫地哈斯迪欧hi殴打扫黄按属地欧萨哄你集的京东is啊</div>
+                    </div>
+                </li>
+                <li class="contextBox">
+                    <div class="head"></div>
+                    <div class="textBox">
+                        <div class="jiantouLeft"></div>
+                        <div class="text">送你礼物 <span>玫瑰花x1</span><span class="yColor">  +1积分</span></div>
                     </div>
                 </li>
                 <li class="contextBox myContentBox">
@@ -52,7 +59,23 @@
                     <div class="head"></div>
                     <div class="textBox">
                         <div class="jiantouLeft"></div>
-                        <div class="text">和代好爱上大搜爱神的箭你扫地哈斯迪欧hi殴打扫黄按属地欧萨哄你集的京东is啊</div>
+                        <div class="text"><audio src="https://alibaba-resource.evkeji.cn/files/uservoice/20200509/430288131/430288131-1589002701_1260.mp3" controls></audio></div>
+                    </div>
+                </li>
+
+                <li class="contextBox">
+                    <div class="head"></div>
+                    <div class="textBox">
+                        <div class="jiantouLeft"></div>
+                        <div class="text"><video src="http://page.qxiu.com/ldz/static/test.mp4" controls></video></div>
+                    </div>
+                </li>
+
+                <li class="contextBox">
+                    <div class="head"></div>
+                    <div class="textBox">
+                        <div class="jiantouLeft"></div>
+                        <div class="text"><video src="http://page.qxiu.com/ldz/static/test2.mp4" controls></video></div>
                     </div>
                 </li>
 
@@ -73,9 +96,9 @@
                 <div class="sendmsgbox">
                     <div class="sendmsg"></div>
                 </div>
-                <div class="checkImg">
+                <!-- <div class="checkImg">
                     <input class="inputFile" type="file" accept=".jpg, .jpeg, .png">
-                </div>
+                </div> -->
             </div>
         </footer>
     </div>
