--- a/src/login.html
+++ b/src/login.html
@@ -15,7 +15,7 @@
     <meta name="screen-orientation" content="portrait">
     <!-- uc全屏显示 -->
     <meta name="full-screen" content="yes">
-    <title>账号登录</title>
+    <title>处电H5</title>
 
 </head>
 
@@ -24,16 +24,15 @@
         <header class="title">
             账号登录
         </header>
-
         <main class="loginWrap">
             <input type="text" class="inp username" name="username" placeholder="&nbsp;&nbsp;&nbsp;&nbsp;请输入账号">
             <input type="password" class="inp password" name="password" placeholder="&nbsp;&nbsp;&nbsp;请输入密码">
             <button class="inp login">登录</button>
         </main>
         <main class="itemWrap">
-            
+
             <div class="content">
-                <dl class="item border-1px EverylastBorderDone">
+                <!-- <dl class="item border-1px EverylastBorderDone">
                     <dd class="taskIcon">
                         <img alt="">
                     </dd>
@@ -52,7 +51,7 @@
                             积分 : <span class="num">20</span>
                         </div>
                     </dd>
-                </dl>
+                </dl> -->
             </div>
             <div class="loadMore"></div>
         </main>
