--- a/src/talk.html
+++ b/src/talk.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="yes" name="apple-mobile-web-app-capable">
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=0">
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
     <meta content="telephone=no,email=no" name="format-detection">
     <meta name="apple-mobile-web-app-title" content="处电">
     <meta content="telephone=no,email=no,address=no" name="format-detection">
@@ -15,12 +15,17 @@
     <meta name="screen-orientation" content="portrait">
     <!-- uc全屏显示 -->
     <meta name="full-screen" content="yes">
-    <title>Document</title>
+    <title>处电H5</title>
 
 </head>
 
 <body>
     <div class="app">
+        <div class="bigImg">
+            <div class="innerDiv" style="position: absolute;">
+                <img id="bigImg" alt="" style="border-radius: .18rem;">
+            </div>
+        </div>
         <header class="title">
             <div class="ListBack"><img src="./img/back.png" alt=""></div>
             <div class="accountDefaultStyle">账号[邻家小妹妹]</div>
@@ -28,7 +33,7 @@
         </header>
         <main class="itemWrap talkPage">
             <ul class="content">
-                <li class="contextBox">
+                <!-- <li class="contextBox">
                     <div class="head"></div>
                     <div class="textBox">
                         <div class="jiantouLeft"></div>
@@ -39,7 +44,7 @@
                     <div class="head"></div>
                     <div class="textBox">
                         <div class="jiantouLeft"></div>
-                        <div class="text">送你礼物 <span>玫瑰花x1</span><span class="yColor">  +1积分</span></div>
+                        <div class="text">送你礼物 <span>玫瑰花x1</span><span class="yColor"> +1积分</span></div>
                     </div>
                 </li>
                 <li class="contextBox myContentBox">
@@ -59,7 +64,9 @@
                     <div class="head"></div>
                     <div class="textBox">
                         <div class="jiantouLeft"></div>
-                        <div class="text"><audio src="https://alibaba-resource.evkeji.cn/files/uservoice/20200509/430288131/430288131-1589002701_1260.mp3" controls></audio></div>
+                        <div class="text"><audio
+                                src="https://alibaba-resource.evkeji.cn/files/uservoice/20200509/430288131/430288131-1589002701_1260.mp3"
+                                controls></audio></div>
                     </div>
                 </li>
 
@@ -87,18 +94,38 @@
                             <img src="./img/bbb.png" alt="">
                         </div>
                     </div>
-                </li>
+                </li> -->
             </ul>
         </main>
         <footer>
+            <div class="huashu">
+                <ul class="huashu_textWrap">
+                    <li class="huashu_text">hello，小哥哥1</li>
+                    <li class="huashu_text">hello，小哥哥2</li>
+                    <li class="huashu_text">hello，小哥哥3</li>
+                    <li class="huashu_text">hello，小哥哥4</li>
+                    <li class="huashu_text">hello，小哥哥5</li>
+                    <li class="huashu_text">hello，小哥哥6</li>
+                    <li class="huashu_text">hello，小哥哥7</li>
+                    <li class="huashu_text">hello，小哥哥8</li>
+                    <li class="huashu_text">hello，小哥哥9</li>
+                </ul>
+                <div class="cancel">取消</div>
+            </div>
             <div class="inputBox">
                 <input class="input" type="text" placeholder="请输入消息...">
                 <div class="sendmsgbox">
                     <div class="sendmsg"></div>
                 </div>
                 <!-- <div class="checkImg">
-                    <input class="inputFile" type="file" accept=".jpg, .jpeg, .png">
+                    
                 </div> -->
+            </div>
+            <div class="fileBox">
+                <div class="click checkImg">选择图片
+                    <input class="inputFile" type="file" accept=".jpg, .jpeg, .png">
+                </div>
+                <div class="click">快捷话术</div>
             </div>
         </footer>
     </div>
