--- a/src/login.html
+++ b/src/login.html
@@ -21,6 +21,9 @@
 
 <body>
     <div class="app">
+        <div class="loading">
+            <div class='cir'></div>
+        </div>
         <header class="title">
             账号登录
         </header>
