--- a/src/talk.html
+++ b/src/talk.html
@@ -21,6 +21,9 @@
 
 <body>
     <div class="app">
+        <div class="showScorce">
+            总积分:0
+        </div>
         <div class="bigImg">
             <div class="innerDiv" style="position: absolute;">
                 <img id="bigImg" alt="" style="border-radius: .18rem;">
