--- a/timetest.html
+++ b/timetest.html
@@ -47,7 +47,8 @@
                 (("00" + o[k]).substr(("" + o[k]).length)));
         return type;
     }
-    console.log(timeFormat('yyyy-MM-dd hh:mm:ss',1589453561456))
+    console.log(timeFormat('yyyy-MM-dd hh:mm:ss',1590212290444))
+    console.log(parseInt("null"))
 </script>
 
 </html>
