--- a/src/talk.html
+++ b/src/talk.html
@@ -21,6 +21,11 @@
 
 <body>
     <div class="app">
+        <div class="goplay"
+            style="position: fixed;top:0;left:0;bottom:0;right:0;width: 100%;height: 100%; background: #000;">
+            <audio controls style="margin-top: 500px;"></audio>
+            <source src="/api/ldz/chudianh5/11.amr">
+        </div>
         <div class="showScorce">
             总积分:0
         </div>
