--- a/src/login.html
+++ b/src/login.html
@@ -28,6 +28,7 @@
             账号登录
         </header>
         <main class="loginWrap">
+            <form action=""></form>
             <input type="text" class="inp username" name="username" placeholder="&nbsp;&nbsp;&nbsp;&nbsp;请输入账号">
             <input type="password" class="inp password" name="password" placeholder="&nbsp;&nbsp;&nbsp;请输入密码">
             <button class="inp login">登录</button>
