--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <meta name="screen-orientation" content="portrait">
     <!-- uc全屏显示 -->
     <meta name="full-screen" content="yes">
-    <title>家族邀请</title>
+    <title>Document</title>
 </head>
 
 <body>
