--- a/src/talk.html
+++ b/src/talk.html
@@ -16,7 +16,6 @@
     <!-- uc全屏显示 -->
     <meta name="full-screen" content="yes">
     <title>Document</title>
-
 </head>
 
 <body>
@@ -133,7 +132,7 @@
             </div>
             <div class="fileBox">
                 <div class="click checkImg">选择图片
-                    <input class="inputFile" type="file" accept=".jpg,.jpeg,.png">
+                    <input class="inputFile" type="file" accept=".jpg,.jpeg,.png,.gif">
                 </div>
                 <div class="click">快捷话术</div>
             </div>
