--- a/src/talk.html
+++ b/src/talk.html
@@ -138,7 +138,7 @@
             </div>
         </footer>
     </div>
-    <script src="http://page.qxiu.com/ldz/chudianh5/libs/BenzAMRRecorder.js"></script>
+    <script src="http://123.57.87.160:80/cd/libs/BenzAMRRecorder.js"></script>
 </body>
 
 </html>
