--- a/src/talk.html
+++ b/src/talk.html
@@ -20,6 +20,8 @@
 
 <body>
     <div class="app">
+
+
         <!-- <div class="goplay"
             style="position: fixed;top:0;left:0;bottom:0;right:0;width: 100%;height: 100%; background: #000;">
             <audio controls style="margin-top: 500px;"></audio>
@@ -121,10 +123,128 @@
                 </ul>
                 <div class="cancel">取消</div>
             </div>
+            <div class="emoji yep">
+                <table style="border:1px solid #ccc" width="100%" height="100%" border="1" class="emojiItem">
+                    <tr align="center">
+                        <td>😀</td>
+                        <td>😁</td>
+                        <td>😂</td>
+                        <td>🤣</td>
+                        <td>😃</td>
+                        <td>😄</td>
+                        <td>😅</td>
+                        <td>😆</td>
+                    </tr>
+
+                    <tr align="center">
+                        <td>😉</td>
+                        <td>😊</td>
+                        <td>😋</td>
+                        <td>😎</td>
+                        <td>😍</td>
+                        <td>😘</td>
+                        <td>😗</td>
+                        <td>😙</td>
+                    </tr>
+
+                    <tr align="center">
+                        <td>😚</td>
+                        <td>☺</td>
+                        <td>🙂</td>
+                        <td>🤗</td>
+                        <td>🤩</td>
+                        <td>🤔</td>
+                        <td>🤨</td>
+                        <td>😑</td>
+                    </tr>
+
+                    <tr align="center">
+                        <td>😶</td>
+                        <td>🙄</td>
+                        <td>😏</td>
+                        <td>😣</td>
+                        <td>😥</td>
+                        <td>😮</td>
+                        <td>🤐</td>
+                        <td>😯</td>
+                    </tr>
+
+                    <tr align="center">
+                        <td>😪</td>
+                        <td>😫</td>
+                        <td>😴</td>
+                        <td>😌</td>
+                        <td>😛</td>
+                        <td>😜</td>
+                        <td>😝</td>
+                        <td>🤤</td>
+                    </tr>
+
+                    <tr align="center">
+                        <td>😒</td>
+                        <td>😓</td>
+                        <td>😴</td>
+                        <td>😔</td>
+                        <td>😕</td>
+                        <td>😭</td>
+                        <td>🤑</td>
+                        <td>😲</td>
+                    </tr>
+
+                    
+                    <tr align="center">
+                        <td>😦</td>
+                        <td>😧</td>
+                        <td>😨</td>
+                        <td>😩</td>
+                        <td>🤯</td>
+                        <td>😬</td>
+                        <td>😰</td>
+                        <td>😱</td>
+                    </tr>
+
+                    <tr align="center">
+                        <td>😳</td>
+                        <td>🤪</td>
+                        <td>😵</td>
+                        <td>😠</td>
+                        <td>😡</td>
+                        <td>🤬</td>
+                        <td>😷</td>
+                        <td>🤒</td>
+                    </tr>
+
+                    <tr align="center">
+                        <td>🤕</td>
+                        <td>🤢</td>
+                        <td>🤮</td>
+                        <td>🤧</td>
+                        <td>😇</td>
+                        <td>🤠</td>
+                        <td>🤡</td>
+                        <td>🤥</td>
+                    </tr>
+
+
+                    <tr align="center">
+                        <td>😺</td>
+                        <td>👹</td>
+                        <td>☠</td>
+                        <td>👻</td>
+                        <td>🐷</td>
+                        <td>🐒</td>
+                        <td>🐴</td>
+                        <td>🦍</td>
+                    </tr>
+                </table>
+            </div>
             <div class="inputBox">
                 <input class="input" type="text" placeholder="请输入消息...">
                 <div class="sendmsgbox">
                     <div class="sendmsg"></div>
+                </div>
+                <div class="Block">
+                    😀
                 </div>
                 <!-- <div class="checkImg">
                     
