--- a/src/talk.html
+++ b/src/talk.html
@@ -20,8 +20,6 @@
 
 <body>
     <div class="app">
-
-
         <!-- <div class="goplay"
             style="position: fixed;top:0;left:0;bottom:0;right:0;width: 100%;height: 100%; background: #000;">
             <audio controls style="margin-top: 500px;"></audio>
@@ -32,6 +30,9 @@
         <div class="showScorce">
             总积分:0
         </div>
+
+
+
         <div class="bigImg">
             <div class="innerDiv" style="position: absolute;">
                 <img id="bigImg" alt="" style="border-radius: .18rem;">
@@ -39,10 +40,10 @@
         </div>
         <header class="title">
             <div class="ListBack"><img src="./img/back.png" alt=""></div>
-            <div class="accountDefaultStyle">账号[邻家小妹妹]</div>
-            <div class="mymessage">我的资料：38|广告策划|江苏南京</div>
+            <div class="accountDefaultStyle"></div>
+            <div class="mymessage"></div>
         </header>
-        <main class="itemWrap talkPage">
+        <main class="itemWrap">
             <ul class="content">
                 <!-- <li class="contextBox">
                     <div class="head"></div>
